<?xml version="1.0"?>
<package format="2">
  <name>limelight_logger_node</name>
  <version>0.0.1</version>
  <description>
    limelight_logger_node
  </description>
  <author>Team 195</author>
  <maintainer email="info@team195.com">Team 195</maintainer>
  <license>BSD</license>
  <url>https://github.com/frcteam195/limelight_logger_node</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>frc_robot_utilities_py_node</depend>
  <depend>ck_ros_msgs_node</depend>

  <test_depend>rostest</test_depend>
</package>
